Setting height of title to avoid flickering while images load

--- a/public/styles.css
+++ b/public/styles.css
@@ -70,6 +70,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 56px;
 }
 
 #page-title img {
